less/header-style.less
header {
    clear: both;
}


// ---------------
// Flexbox
// ---------------

.flex-container {
    .flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}
// Global style for flex items
.flex-item {
    @media only screen and (min-width : 770px) {
        margin: 10px 0;
    }
    @media @tablet {
        -webkit-box-ordinal-group: 1;
        -moz-box-ordinal-group: 1;
        -webkit-order: 0;
        -ms-flex-order: 0;
        order: 0;
        margin-bottom: 0;
    }
}




// -------------------------------------------------------
// Header First Row: Logo, Company Name, Nav & Shop Basket
// -------------------------------------------------------

// Flex Box
// -------------------------

.header__first-row.flex-container {
    margin: 30px 0 15px;
    min-height: 30px;
    @media only screen and (min-width : 770px) {
        margin: 30px 0 20px;
    }
    @media @tablet {
        padding: 0;
        -webkit-box-orient: vertical;
        -moz-box-orient: vertical;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }
}

.header__first-row .flex-item {
    // Reorder items for desktop
    @media only screen and (min-width : 770px) {
        margin: 10px 0;
        &.flex-shopbasket {
            -webkit-box-ordinal-group: 5;
            -moz-box-ordinal-group: 5;
            -webkit-order: 4;
            -ms-flex-order: 4;
            order: 4;
            margin: 10px 0 10px auto;
            .ecombasket {
                margin-left: 24px;
            }
        }
        &.flex-nav {
            -webkit-box-ordinal-group: 4;
            -moz-box-ordinal-group: 4;
            -webkit-order: 3;
            -ms-flex-order: 3;
            order: 3;
            .navigation-list {
                margin: 0 -12px;
            }
        }
        &.flex-logo {
            -webkit-box-ordinal-group: 2;
            -moz-box-ordinal-group: 2;
            -webkit-order: 1;
            -ms-flex-order: 1;
            order: 1;
        }
        &.flex-companyname {
            -webkit-box-ordinal-group: 3;
            -moz-box-ordinal-group: 3;
            -webkit-order: 2;
            -ms-flex-order: 2;
            order: 2;
        }
    }
}
// Social icons, logo and companyname
.flex-shopbasket,
.flex-logo,
.flex-companyname {
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
}

// Navigation widget
.flex-nav {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    @media @tablet {
        width: 100%;
        .navigation-toggle {
            height: 40px;
        }
    }
}

// Spacing for logo and company name on tablet and mobile

@media @tablet {
    .flex-logo {
        width: 100%;
        text-align: center;
        .widget {
            margin: 0 0 5px;
        }
    }
    .flex-companyname {
        width: 100%;
        margin-top: 5px;
        text-align: center;

        .widget {
            margin-bottom: 15px;
            @media @mobile {
                margin-bottom: 0;
            }
        }
    }
}

@media @mobile {
    .flex-companyname {
        margin-bottom: 5px;
    }
}



// Tablet top bar background
// -------------------------

.flex-shopbasket .tablet-top-bar {
    @media @tablet {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 46px;
        background-color: @color__navigation--background;
        z-index: -1;
    }
}


// Shopping Basket
// -------------------------


.ecombasket {
    .basket-item-details a,
    .basket-item-details p {
        text-align: left;
        font-size: bkscale(@font__p--font-size,0.8);
        line-height: bkscale(@font__p--line-height,0.8);
    }
}

.flex-shopbasket {
    min-height: 44px;
    .ecombasket .view-basket.button:hover {
        color: @color-swatch1;
    }
}




// Brand
// -------------------------

.logo {
  margin-right: 10px;
  @media @tablet {
    margin-right: 0;
    margin-bottom: 5px;
  }
}

// Add padding to logo and company name so they don't overlap with nav icon when store is offline.
.logo,
.companyname {
    @media @tablet {
        padding: 0 44px;
    }
}

.company-link:hover {
    color: @font-swatch6-color;
    text-decoration: none;
    .transition( all, 0.5s, ease );
}




// Navigation
// -------------------------

// Parent nav items, adds arrow icon
.item-name--parent:after {
    display: inline-block;
    vertical-align: middle;
    content: "";
    margin-left: 4px;
    border: 5px solid transparent;
    border-top-color: @font-swatch6-color;
}
.item-name--parent:hover:after {
    border-top-color: @font-swatch6-color-hover;
}

// Selected nav item

.navigation-item.selected > .item-name {
    color: @font-swatch6-color-hover;
}
/* ... */

